--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
+    <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+<df-messenger
+  intent="WELCOME"
+  chat-title="DBSbot"
+  agent-id="89f1a494-32fe-4873-a0ca-705b74d7e2c0"
+  language-code="ko"
+></df-messenger>
     <meta charset="UTF-8">
 
 {% seo %}
