--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
   chat-title="DBSbot"
   agent-id="89f1a494-32fe-4873-a0ca-705b74d7e2c0"
   language-code="ko"
+chat-icon=https://user-images.githubusercontent.com/56920885/171202319-23afe7bb-6ea3-4d8c-82be-29ec3c574266.png
 ></df-messenger>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
