--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,16 @@
   language-code="ko"
 chat-icon=https://user-images.githubusercontent.com/56920885/171202319-23afe7bb-6ea3-4d8c-82be-29ec3c574266.png
 ></df-messenger>
+<style>
+df-messenger {
+--df-messenger-bot-message: #878fac;
+--df-messenger-button-titlebar-color: #94df56;
+--df-messenger-chat-background-color: #fafafa;
+--df-messenger-font-color: white;
+--df-messenger-send-icon: #878fac;
+--df-messenger-user-message: #479b3d;
+}
+</style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
