--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
+ <link href="//fonts.googleapis.com/earlyaccess/jejugothic.css" rel="stylesheet" type="text/css">
+	<style type="text/css">
+	.Jeju Gothic { font-family: 'Jeju Gothic'; }
+	
+	</style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     
 <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
 <df-messenger
