--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,10 @@ df-messenger {
     {% include head-custom.html %}
   </head>
   <body>
+<h1 class="Jeju Gothic">
+		 <div style='font-size:18px;'>
+		<span style="font-weight: lighter">
+						  <span style="font-weight: lighter">
     <div class="wrapper">
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
