--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
  <link href="//fonts.googleapis.com/earlyaccess/jejugothic.css" rel="stylesheet" type="text/css">
 	<style type="text/css">
-	.Jeju Gothic { font-family: 'Jeju Gothic'; }
+	.hanna { font-family: 'Jeju Gothic'; }
 	
 	</style>
     <meta charset="UTF-8">
@@ -41,7 +41,7 @@ df-messenger {
     {% include head-custom.html %}
   </head>
   <body>
-<h1 class="Jeju Gothic">
+<h1 class="hanna">
 		 <div style='font-size:18px;'>
 		<span style="font-weight: lighter">
 						  <span style="font-weight: lighter">
