--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,8 @@
 <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
 <df-messenger
   intent="WELCOME"
-  chat-title="DBSbot"
-  agent-id="89f1a494-32fe-4873-a0ca-705b74d7e2c0"
+  chat-title="DBS_bot_2"
+  agent-id="054a6623-3e56-4994-af36-c0e688e3e91b"
   language-code="ko"
 chat-icon=https://user-images.githubusercontent.com/56920885/171202319-23afe7bb-6ea3-4d8c-82be-29ec3c574266.png
 ></df-messenger>
